syntax = "proto3";

package user;
import "common/base_response.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

option go_package = "grpc-course-protobuf/pb/user";

service UserService {
  rpc CreateUser(User) returns (CreateResponse);
}

message Address {
  int64 id = 1;
  string full_address = 2;
  string province = 3;
  string city = 4;
}

message User {
    reserved 2;
  int64 id = 1;
  int64 age = 3 [(buf.validate.field).int64.gte = 0];
  double balance = 4 [(buf.validate.field).double.gte = 0.0];
  bool is_active = 5;
  Address address = 6;
  repeated string education = 7;
  string spouse_name = 8;
  google.protobuf.Timestamp birth_date = 9;
}

message CreateResponse {
  common.BaseResponse base = 1;
  google.protobuf.Timestamp created_at = 2;
}